@@ -337,14 +337,31 @@ class FawkesConf
                 {
                     $parentContainer->_childContainers[$containerName] = $ldv;
                     $ldv->parentContainer = $parentContainer;
+
+                    /*
                     $ldv->addressStore->parentCentralStore = $parentContainer->addressStore;
                     $ldv->serviceStore->parentCentralStore = $parentContainer->serviceStore;
                     $ldv->tagStore->parentCentralStore = $parentContainer->tagStore;
                     $ldv->scheduleStore->parentCentralStore = $parentContainer->scheduleStore;
                     $ldv->appStore->parentCentralStore = $parentContainer->appStore;
                     $ldv->securityProfileGroupStore->parentCentralStore = $parentContainer->securityProfileGroupStore;
+                    */
                     //Todo: swaschkut 20210505 - check if other Stores must be added
                     //- appStore;scheduleStore/securityProfileGroupStore/all kind of SecurityProfile
+
+                    $storeType = array(
+                        'addressStore', 'serviceStore', 'tagStore', 'scheduleStore', 'appStore',
+
+                        'securityProfileGroupStore',
+
+                        'URLProfileStore', 'AntiVirusProfileStore', 'FileBlockingProfileStore', 'DataFilteringProfileStore',
+                        'VulnerabilityProfileStore', 'AntiSpywareProfileStore', 'WildfireProfileStore',
+                        'DecryptionProfileStore', 'HipObjectsProfileStore'
+
+                    );
+
+                    foreach( $storeType as $type )
+                        $ldv->$type->parentCentralStore = $parentContainer->$type;
                 }
             }
             
@@ -855,14 +872,31 @@ class FawkesConf
         {
             $parentContainer->_childContainers[$name] = $newDG;
             $newDG->parentContainer = $parentContainer;
+
+            /*
             $newDG->addressStore->parentCentralStore = $parentContainer->addressStore;
             $newDG->serviceStore->parentCentralStore = $parentContainer->serviceStore;
             $newDG->tagStore->parentCentralStore = $parentContainer->tagStore;
             $newDG->scheduleStore->parentCentralStore = $parentContainer->scheduleStore;
             $newDG->appStore->parentCentralStore = $parentContainer->appStore;
             $newDG->securityProfileGroupStore->parentCentralStore = $parentContainer->securityProfileGroupStore;
+            */
             //Todo: swaschkut 20210505 - check if other Stores must be added
             //- appStore;scheduleStore/securityProfileGroupStore/all kind of SecurityProfile
+
+            $storeType = array(
+                'addressStore', 'serviceStore', 'tagStore', 'scheduleStore', 'appStore',
+
+                'securityProfileGroupStore',
+
+                'URLProfileStore', 'AntiVirusProfileStore', 'FileBlockingProfileStore', 'DataFilteringProfileStore',
+                'VulnerabilityProfileStore', 'AntiSpywareProfileStore', 'WildfireProfileStore',
+                'DecryptionProfileStore', 'HipObjectsProfileStore'
+
+            );
+
+            foreach( $storeType as $type )
+                $newDG->$type->parentCentralStore = $parentContainer->$type;
         }
 
         return $newDG;
@@ -930,14 +964,31 @@ class FawkesConf
         {
             $parentContainer->_childContainers[$name] = $newDG;
             $newDG->parentContainer = $parentContainer;
+
+            /*
             $newDG->addressStore->parentCentralStore = $parentContainer->addressStore;
             $newDG->serviceStore->parentCentralStore = $parentContainer->serviceStore;
             $newDG->tagStore->parentCentralStore = $parentContainer->tagStore;
             $newDG->scheduleStore->parentCentralStore = $parentContainer->scheduleStore;
             $newDG->appStore->parentCentralStore = $parentContainer->appStore;
             $newDG->securityProfileGroupStore->parentCentralStore = $parentContainer->securityProfileGroupStore;
+            */
             //Todo: swaschkut 20210505 - check if other Stores must be added
             //- appStore;scheduleStore/securityProfileGroupStore/all kind of SecurityProfile
+
+            $storeType = array(
+                'addressStore', 'serviceStore', 'tagStore', 'scheduleStore', 'appStore',
+
+                'securityProfileGroupStore',
+
+                'URLProfileStore', 'AntiVirusProfileStore', 'FileBlockingProfileStore', 'DataFilteringProfileStore',
+                'VulnerabilityProfileStore', 'AntiSpywareProfileStore', 'WildfireProfileStore',
+                'DecryptionProfileStore', 'HipObjectsProfileStore'
+
+            );
+
+            foreach( $storeType as $type )
+                $newDG->$type->parentCentralStore = $parentContainer->$type;
         }
 
         return $newDG;
