@@ -15,6 +15,7 @@ BUGFIX:
 * class SecurityProfileGroupStrore | bugfix to search for available object name only in current Store
 * UTIL type=address actions=move:XYZ,removeifmatch | bugfix if address-group has same nested address-group member, but this nested group has different members
 * UTIL type=service actions=move:XYZ,removeifmatch | bugfix for nested servicegroups with different members
+* class DeviceCloud/FawkesConf/PanoramaConfg - bugfix to calculate parentCentralStore
 
 GENERAL:
 
